--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
     margin: 0;
     padding: 0;
 }
+
+.scrollable-element {
+    scrollbar-color: pink white;
+}
+
+.select2-container .select2-selection--single{
+    height:34px !important;
+}
+.select2-container--default .select2-selection--single{
+         border: 1px solid #ccc !important; 
+     border-radius: 10px !important; 
+}
