--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Oswald', sans-serif;
 }
+.row { margin: 0; padding: 0 }
 
 .scrollable-element {
     scrollbar-color: pink white;
@@ -18,7 +20,7 @@
     text-align: center;
   }
   
-  .App-logo {
+  /* .App-logo {
     height: 40vmin;
     pointer-events: none;
   }
@@ -31,7 +33,7 @@
   
   .App-header {
     background-color: #282c34;
-    min-height: 100vh;
+    min-height: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,9 +53,10 @@
     to {
       transform: rotate(360deg);
     }
-  }
+  } */
   .leaflet-container {
-    height: 400px;
+    max-height: 600px;
+    min-height: 450px;
     width: 100%;
   }
   
