ui changes made

--- a/src/components/CountryTable/Country.css
+++ b/src/components/CountryTable/Country.css
@@ -1,7 +1,7 @@
-.select2-container .select2-selection--single{
+/* .select2-container .select2-selection--single{
     height:400px !important;
 }
 .select2-container--default .select2-selection--single{
          border: 1px solid #ccc !important; 
      border-radius: 10px !important; 
-}
+} */
