--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,14 @@
     width: 95%;
   }
   
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #eee;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #616161;
+    border-radius: 20px;
+    border: 3px solid #eee;
+  }
